[tool.poetry]
name = "esquite-api"
version = "0.0.1"
description = "Esquite API write with fastapi framework"
authors = ["Elotl MX <contacto@elotl.mx>"]
license = "MPL 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.0"}
python-multipart = "^0.0.12"
aiofiles = "^24.1.0"
typesense = "^0.21.0"

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
